[package]
authors = ["shaoyuancc <flossy_lineage.0b@icloud.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f401-rover-testbed"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f401"]

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f401-rover-testbed"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
